--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,10 @@ img {
 }
 
 .logo {
-	font-family: 'GT-Cinetype';
+	font-family: 'GT-Cinetype-Trial-Bold';
+	-webkit-font-smoothing: antialiased;
+
+	font-size: 1.2rem;
 }
 
 #timeline {
