--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,18 @@ img {
 	position: fixed;
 	width: 100%;
 	z-index: 5000;
+
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
 }
 
 .logo {
+	font-family: 'GT-Cinetype-Trial-Bold';
+	-webkit-font-smoothing: antialiased;
+	font-size: 1.2rem;
+}
+.sort {
 	font-family: 'GT-Cinetype-Trial-Bold';
 	-webkit-font-smoothing: antialiased;
 	font-size: 1.2rem;
@@ -68,10 +77,10 @@ img {
 
 	transition: all 0.1s ease;
 	cursor: pointer;
-	z-index: 1000;
+
 }
 .timelineRowMedia .media:hover {
-	transform: scale3d(1.4, 1.4, 1.4);
+	transform: scale3d(2, 2, 2);
 	z-index: 2000;
 }
 
@@ -115,4 +124,38 @@ img {
 .date {
 	font-family: 'GT-Cinetype-Trial-Bold';
 	font-size: .8rem;
+}
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
+    }
+}
+.fade-in {
+    opacity: 0;
+    -webkit-animation: fadeIn ease-in-out 1;
+    animation: fadeIn ease-in-out 1;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-duration: .4s;
+    animation-duration: .4s;
+    -webkit-animation-delay: .33s;
+    animation-delay: .33s
+}
+.fade-in.two {
+    -webkit-animation-duration: .4s;
+    animation-duration: .4s;
+    -webkit-animation-delay: .66s;
+    animation-delay: .66s
+}
+
+.fade-in.three {
+    -webkit-animation-duration: .4s;
+    animation-duration: .4s;
+    -webkit-animation-delay: .77s;
+    animation-delay: .77s
 }
