--- a/css/styles.css
+++ b/css/styles.css
@@ -21,21 +21,19 @@ body {
 	background-color: #FBFBFB;
 }
 
-img { 
-
+img {
 }
 a:link, a:visited {
 	color: blue;
 	text-decoration: none;
 }
-
 .masthead {
 	padding: 2.5rem 5%;
 	text-align: center;
 	background-color: #FFF;
 	position: fixed;
 	width: 100%;
-	z-index: 5000;
+	z-index: 15000;
 
 	display: -ms-flexbox;
 	display: -webkit-flex;
@@ -113,8 +111,8 @@ a:link, a:visited {
 #timeline > div .timelineRowsHeading, #timeline > div .timelineRowDates {
 	opacity: 0;
 }
-#timeline > div:nth-child(6n + 1) .timelineRowsHeading,
-#timeline > div:nth-child(6n + 1) .timelineRowDates {
+#timeline > div:nth-child(6n + 2) .timelineRowsHeading,
+#timeline > div:nth-child(6n + 2) .timelineRowDates {
 	opacity: 1;
 }
 
@@ -154,20 +152,14 @@ a:link, a:visited {
 }
 
 .media-container {
-	padding: 2.5rem 0;
+	padding: 6rem 0;
 }
-.image-card {
-	position: fixed;
-/*	max-width: 60%;*/
-}
+
 .image-card img {
 	width: 100%;
 }
 
 .media-card {
-	z-index: 9000;
-/*	mix-blend-mode: lighten;*/
-	position: relative;
 }
 .media-card:after {
 	content: '';
@@ -187,12 +179,15 @@ a:link, a:visited {
 	letter-spacing: 1px;
 }
 .media-card {
+	z-index: 9000;
+/*	mix-blend-mode: lighten;*/
+	position: relative;
 	border-radius: .1rem;
 	background-color: #93ABCF;
 	padding: 5%;
 	color: #FFF;
 	width: 100%;
-	margin-top: 10rem;
+/*	margin-top: 20rem;*/
 }
 .media-card .post-information {
 	border: solid 1px #FFF;
@@ -270,17 +265,25 @@ a:link, a:visited {
 		padding-top: 12rem;
 	}   
 	.media-container {
-		padding-top: 12rem;
+/*		padding-top: 12rem;*/
 	}
 }
 
 @media(min-width: 46rem) {
 	.media-container {
 		padding: 2.5rem 5%;
-	}	
+	}
 	.media-card {
 		width: 50%;
 		max-width: 30rem;
+		margin-top: 10rem;
+	}
+	.image-card {
+		position: fixed;
+		width: 100%;
+	}
+	.image-card {
+		width: 90%;
 	}
 }
 
