Adds layout and styles to account for small images

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,55 @@
     -ms-font-feature-settings: "kern" 1, "liga" 1, "frac" 1; 
 /*    border: solid red 1px;*/
 }
+
+
+::-webkit-scrollbar {
+    width: 14.4px;
+    width: .9rem;
+    background-color: #fafbfb;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #fafbfb;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: .9rem;
+    background-color: #a7a9ab;
+    border: solid 4px #fefefe
+}
+
+::-webkit-input-placeholder {
+    color: #d1d2d4;
+}
+
+:-moz-placeholder {
+    color: #d1d2d4;
+}
+
+::-moz-placeholder {
+    color: #d1d2d4;
+}
+
+:-ms-input-placeholder {
+    color: #d1d2d4;
+}
+
+::-moz-selection {
+    color: #fefefe;
+    background: rgba(0,0,255,1);
+}
+
+::selection {
+    color: #fefefe;
+    background: rgba(0,0,255,1);
+}
+
+
+
+
+
+
 @font-face {
 	font-family: "GT-Cinetype-Trial-Bold";
 	src: url(../css/fonts/GT-Cinetype-Trial-Bold.eot);
@@ -14,14 +63,27 @@
 	font-weight: 400;
 	font-style: normal
 }
-
+@font-face {
+	font-family: "Miller-Text";
+	src: url(../css/fonts/Miller-Text.eot);
+	src: url(../css/fonts/Miller-Text?#iefix) format("embedded-opentype"), url(../css/fonts/Miller-Text.woff) format("woff"), url(../css/fonts/Miller-Text.ttf) format("truetype");
+	font-weight: 400;
+	font-style: normal
+}
+html {
+	height: 100%;	
+}
 body {
 	margin: 0;
 	padding: 0;
 	background-color: #FBFBFB;
+	height: 100%;
 }
-
 img {
+
+}
+.container-fluid, #main {
+	height: 100%;
 }
 a:link, a:visited {
 	color: blue;
@@ -39,9 +101,15 @@ a:link, a:visited {
 	display: -webkit-flex;
 	display: flex;
 }
-.masthead > * {
-	flex: 3 33%;
-} 
+.masthead > *:nth-of-type(1) {
+	flex: 3 20%;
+}
+.masthead > *:nth-of-type(2) {
+	flex: 3 40%;
+}
+.masthead > *:nth-of-type(3) {
+	flex: 3 20%;
+}
 
 .back {
 	font-family: 'GT-Cinetype-Trial-Bold';
@@ -53,23 +121,38 @@ a:link, a:visited {
 	font-family: 'GT-Cinetype-Trial-Bold';
 	-webkit-font-smoothing: antialiased;
 	font-size: 1.2rem;
+	text-transform: uppercase;
+}
+.logo a:link, .logo a:visited {
+	color: #111;
 }
 .sort {
 	font-family: 'GT-Cinetype-Trial-Bold';
 	-webkit-font-smoothing: antialiased;
 	font-size: 1rem;
 	text-align: right;
+	color: #111;
 }
 
+.intro {
+	padding: 0 5%;
+}
 .intro h1 {
 	font-family: 'MillerBanner';
+	text-transform: capitalize;
 	font-size: 3rem;
+	line-height: 1;
 	text-align: center;
+	margin: 0 0 1rem 0;
+	color: #333;
 }
 .intro p {
-	font-family: 'MillerBanner';
-	font-size: 3rem;
+	font-family: 'Miller-Text';
+	font-size: 1rem;
+	line-height: 1.5;
 	text-align: center;
+	margin: 0 0 3rem 0;
+	color: #333;
 }
 
 
@@ -153,7 +236,7 @@ a:link, a:visited {
 	position: absolute;
 	width: 5rem;
 	height: 1px;
-	left: 5rem;
+	left: 8rem;
 	top: 1rem;
 	background-color: blue;
 }
@@ -164,42 +247,39 @@ a:link, a:visited {
 }
 
 .media-container {
-	padding: 6rem 0;
+	padding: 6.45rem 0;
+	height: 100%;
 }
+
+/* Image Card */
 
 .image-card img {
 	width: 100%;
 }
 
+/* Media Card */
 .media-card {
-}
-.media-card:after {
-	content: '';
-	background-color: #93ABCF;
-	position: absolute;
-	height: 100%;
+	position: relative;
+	border-radius: .1rem;
+/*	background-color: rgba(147,171,207,.8);*/
+	background-color: rgba(47, 181, 57, 0.72);
+	color: #FFF;
 	width: 100%;
-	top: 0;
-	left: 0;
-	z-index: -1;
-/*	mix-blend-mode: normal;*/
+	height: 100%;
+}
+.media-card-bg {
+	padding: 10%;
+	height: 100%;
+	mix-blend-mode: normal;
+	background-color: #93ABCF;
+	mix-blend-mode: lighten;
+/*	background-color: rgba(0,0,0,.1);*/
 }
 .media-card h3 {
 	font-family: 'MillerBanner';
 	font-size: 3rem;
-	margin: 0 0 2rem 0;
+	margin: 2rem 0 2rem 0;
 	letter-spacing: 1px;
-}
-.media-card {
-	z-index: 9000;
-/*	mix-blend-mode: lighten;*/
-	position: relative;
-	border-radius: .1rem;
-	background-color: #93ABCF;
-	padding: 5%;
-	color: #FFF;
-	width: 100%;
-/*	margin-top: 20rem;*/
 }
 .media-card .post-information {
 	border: solid 1px #FFF;
@@ -236,6 +316,7 @@ a:link, a:visited {
 }
 .media-card .description {
 	font-family: "Graphik";
+	letter-spacing: .5px;
 	line-height: 1.4;
 	font-size: .95rem;
 	font-weight: 300;
@@ -270,6 +351,43 @@ a:link, a:visited {
 	background-color: #FFF;
 }
 
+.previous, .next {
+	position: absolute;
+	z-index: 10000;
+	font-family: 'Miller';
+	transition: all 0.1s ease;
+	cursor: pointer;
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none;   /* Chrome/Safari/Opera */
+	-khtml-user-select: none;    /* Konqueror */
+	-moz-user-select: none;      /* Firefox */
+	-ms-user-select: none;       /* Internet Explorer/Edge */
+	user-select: none; 
+}
+.previous:hover {
+	background-color: rgba(240,240,240,.8);
+	padding-left: .8rem;
+	padding-right: 1.2rem;
+}
+.next:hover {
+	background-color: rgba(240,240,240,.8);
+	padding-right: .8rem;
+	padding-left: 1.2rem;
+}
+.previous {
+	left: 0;
+	top: 50%;
+	color: #333;
+	padding: 1rem;
+	background-color: rgba(240,240,240,.1);
+}
+.next {
+	right: 0;
+	top: 50%;
+	color: #333;
+	padding: 1rem;
+	background-color: rgba(240,240,240,.1);
+}
 
 @media(min-width: 28rem) {
 	#timeline {
@@ -277,24 +395,28 @@ a:link, a:visited {
 		padding-top: 12rem;
 	}   
 	.media-container {
-/*		padding-top: 12rem;*/
+	}
+	.image-card.small {
+		text-align: right;
+		padding: 4.5%;
+	}
+	.image-card.small img {
+		max-width: 39.35rem;
+		width: auto;
 	}
 }
 
 @media(min-width: 46rem) {
 	.media-container {
-		padding: 2.5rem 5%;
+		padding: 6.45rem 5%;
 	}
 	.media-card {
 		width: 50%;
-		max-width: 30rem;
-		margin-top: 10rem;
+		max-width: 26rem;
+		margin: 5% 0 0 5%;
 	}
 	.image-card {
 		position: fixed;
-		width: 100%;
-	}
-	.image-card {
 		width: 90%;
 	}
 }
