--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,29 @@ a:link, a:visited {
 	transition: all .2s ease;
 	text-transform: uppercase;
 	letter-spacing: .1rem;
+	position: relative;
+}
+.logo a {
+	position: relative;
+	width: auto;
+}
+.logo a:before {
+	content: '';
+	position: absolute;
+	left: -1.6rem;
+	width: 2px;
+	height: 2px;
+	border: solid #333 2px;
+	top: 0;
+}
+.logo a:after {
+	content: '';
+	position: absolute;
+	right: -1.6rem;
+	width: 2px;
+	height: 2px;
+	border: solid #333 2px;
+	bottom: 0;
 }
 .logo:hover {
 	opacity: .3;
@@ -432,6 +455,10 @@ a:link, a:visited {
 	font-family: 'GT-Cinetype-Trial-Bold';
 	letter-spacing: 1px;
 }
+.story-list h1 { 
+	border-bottom: solid blue 1px;
+	padding-bottom: 1rem;
+}
 .results {
 	padding: 8.45rem 0;
 	font-family: 'GT-Cinetype-Trial-Bold';
@@ -567,10 +594,12 @@ input:focus, textarea:focus {
 		background-color: blue;
 	}
 
+	/* Search */
 	.search {
 		padding: 8.45rem 30%;
 	}
 
+	/* Post */
 	.media-container {
 		padding: 6.45rem 5%;
 	}
@@ -590,6 +619,11 @@ input:focus, textarea:focus {
 	.image-card.small img {
 		max-width: 39.35rem;
 		width: auto;
+	}
+
+	/* List */
+	.story-list {
+		padding: 8.45rem 30%;
 	}
 }
 
