--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ img {
 button {
 	-webkit-appearance: none;
 	width: 5rem;
-	padding: .8rem 1rem;
+	padding: .8rem 1.5rem;
 	font-family: 'GT-Cinetype-Trial-Bold';
 	font-size: 1rem;
 	width: auto;
@@ -475,6 +475,16 @@ a:hover, a:focus, a:active {
 }
 
 /* Curration Pages */
+
+/* Search */
+.search {
+/*	background: url('../images/juarez2.jpg') no-repeat;
+	background-size: cover;
+	background-position: 50% 50%;
+	height: 100%;*/
+}
+
+
 .search, .story-list {
 	padding: 8.45rem 5%;
 	font-family: 'GT-Cinetype-Trial-Bold';
@@ -493,6 +503,15 @@ a:hover, a:focus, a:active {
 	padding: 2.3rem 5% 2.3rem 5%;
 	background-color: #EEE;
 }
+
+.post-information > div { 
+	display: block;
+}
+.post-information div input, .post-information div textarea { 
+	max-width: 30rem;
+	display: block;
+}
+
 .entry {
 	padding: 2rem 5% 0 5%;
 	margin: 2rem 0 0 0;
