--- a/css/styles.css
+++ b/css/styles.css
@@ -318,8 +318,8 @@ a:hover, a:focus, a:active {
 #timeline > div .timelineRowsHeading, #timeline > div .timelineRowDates {
 	opacity: 0;
 }
-#timeline > div:nth-child(6n + 2) .timelineRowsHeading,
-#timeline > div:nth-child(6n + 2) .timelineRowDates {
+#timeline > div:nth-child(2n + 2) .timelineRowsHeading,
+#timeline > div:nth-child(2n + 2) .timelineRowDates {
 	opacity: 1;
 }
 
@@ -362,7 +362,8 @@ a:hover, a:focus, a:active {
 .media-card h3 {
 	font-family: 'MillerBanner';
 	font-size: 3rem;
-	margin: 2rem 0 2rem 0;
+	margin: 2rem 0 2.6rem 0;
+	line-height: 1;
 	letter-spacing: 1px;
 }
 .media-card .post-information {
@@ -503,14 +504,42 @@ a:hover, a:focus, a:active {
 	padding: 2.3rem 5% 2.3rem 5%;
 	background-color: #EEE;
 }
+.post-information input {
+	font-family: 'MillerBanner';
+	text-transform: capitalize;
+	font-size: 3.4rem;
+	line-height: 1;
+	text-align: center;
+	margin: 0 0 1rem 0;
+	color: #333;
+}
+.post-information textarea {
+	font-family: 'Miller-Text';
+	font-size: 1rem;
+	line-height: 1.5;
+	text-align: center;
+	margin: 0 0 6rem 0;
+	color: #333;
+	position: relative;
+}
+.post-information input,
+.post-information textarea {
+	border: none;
+	background-color: transparent;
+}
+.post-information input:focus,
+.post-information textarea:focus {
+	border: none;
+	border-bottom: solid 1px #DDD;
+}
 
-.post-information > div { 
+/*.post-information > div { 
 	display: block;
 }
 .post-information div input, .post-information div textarea { 
 	max-width: 30rem;
 	display: block;
-}
+}*/
 
 .entry {
 	padding: 2rem 5% 0 5%;
@@ -612,7 +641,7 @@ input:focus, textarea:focus {
 	.timelineRowsHeading {
 		position: absolute;
 		left: 0;
-		top: 0;
+		top: 1.25rem;
 		text-align: left;
 	}
 	.timelineRowDates {
@@ -634,7 +663,7 @@ input:focus, textarea:focus {
 		width: 5rem;
 		height: 1px;
 		left: 8rem;
-		top: 1rem;
+		top: .5rem;
 		background-color: blue;
 	}
 
