--- a/css/styles.css
+++ b/css/styles.css
@@ -515,7 +515,7 @@ a:hover, a:focus, a:active {
 	font-size: 3.4rem;
 	line-height: 1;
 	text-align: center;
-	margin: 0 0 1rem 0;
+	margin: 0 0 .2rem 0;
 	color: #333;
 }
 .post-information input.description {
