New polished colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,12 +43,12 @@
 
 ::-moz-selection {
     color: #fefefe;
-    background: rgba(0,0,255,1);
+    background: #c1bc8c;
 }
 
 ::selection {
     color: #fefefe;
-    background: rgba(0,0,255,1);
+    background: #c1bc8c;
 }
 
 
@@ -93,7 +93,7 @@ button {
 	font-family: 'GT-Cinetype-Trial-Bold';
 	font-size: 1rem;
 	width: auto;
-	background-color: blue;
+	background-color: #c1bc8c;
 	color: #FFF;
 	border: none;
 	cursor: pointer;
@@ -107,7 +107,7 @@ button:hover, button:focus {
 	height: 100%;
 }
 a:link, a:visited {
-	color: blue;
+	color: #c1bc8c;
 	text-decoration: none;
 	transition: all .2s ease;
 }
@@ -215,7 +215,7 @@ a:hover, a:focus, a:active {
 	-webkit-font-smoothing: antialiased;
 	font-size: 1rem;
 	text-align: right;
-	color: #111;
+	color: #c1bc8c;
 }
 
 .intro {
@@ -267,7 +267,7 @@ a:hover, a:focus, a:active {
 	font-size: .8rem;
 	text-transform: uppercase;
 	position: relative;
-	color: blue;
+	color: #c1bc8c;
 	margin-top: 2rem;
 	margin-bottom: .2rem;
 }
@@ -371,7 +371,7 @@ a:hover, a:focus, a:active {
 	height: 100%;
 }
 .media-card-bg {
-	padding: 10%;
+	padding: 5%;
 	height: 100%;
 	mix-blend-mode: normal;
 	background-color: #93ABCF;
@@ -411,6 +411,9 @@ a:hover, a:focus, a:active {
 	text-align: center;
 	letter-spacing: 1px;
 }
+.media-card .time-stamp a:link {
+	color: #FFF;
+}
 .media-card .retweets-count {
 	font-family: 'GT-Cinetype-Trial-Bold';
 	-webkit-font-smoothing: antialiased;
@@ -428,11 +431,20 @@ a:hover, a:focus, a:active {
 	position: relative;
 	margin-top: 4rem;
 }
-.media-card .description a:link, .media-card .description a:visited{
+.media-card .source {
+/*	background-color: #FFF;*/
+}
+.media-card .source a:link, .media-card .source a:visited {
 	color: #FEFEFE;
 	border-bottom: solid #FFF 1px;
+	font-family: "Graphik";
+	font-size: .85rem;
+	display: inline-block;
+	letter-spacing: 1px;
+	margin-top: 1rem;
+	text-transform: uppercase;
 }
-.media-card .description a:hover, .media-card .description a:focus, .media-card .description a:active {
+.media-card .source a:hover, .media-card .source a:focus, .media-card .source a:active {
 	margin-left: .2rem;
 }
 .media-card .description:before {
@@ -450,18 +462,8 @@ a:hover, a:focus, a:active {
 	-webkit-font-smoothing: antialiased;
 	font-size: .8rem;
 	position: relative;
-	margin-top: 4rem;
 }
-.media-card .hashtags:before {
-	content: '';
-	position: absolute;
-	width: 2.6rem;
-	height: 1px;
-	left: 50%;
-	top: -2rem;
-	margin-left: -1.3rem;
-	background-color: #FFF;
-}
+
 
 .previous, .next {
 	position: absolute;
@@ -518,7 +520,7 @@ a:hover, a:focus, a:active {
 	letter-spacing: 1px;
 }
 .story-list h1 { 
-	border-bottom: solid blue 1px;
+	border-bottom: solid #c1bc8c 1px;
 	padding-bottom: 1rem;
 }
 .results {
@@ -645,7 +647,7 @@ input, textarea {
 	border: solid #DDD 1px;
 }
 input:focus, textarea:focus {
-	border: solid blue 1px;
+	border: solid #c1bc8c 1px;
 }
 .post-information label {
 /*	border: solid red 1px;*/
@@ -698,7 +700,7 @@ input:focus, textarea:focus {
 		height: 1px;
 		left: 9rem;
 		top: .5rem;
-		background-color: blue;
+		background-color: #c1bc8c;
 	}
 
 	/* Search */
@@ -714,6 +716,9 @@ input:focus, textarea:focus {
 		width: 50%;
 		max-width: 26rem;
 		margin: 5% 0 0 5%;
+	}
+	.media-card-bg {
+		padding: 10%;
 	}
 	.image-card {
 		position: fixed;
