--- a/css/styles.css
+++ b/css/styles.css
@@ -43,12 +43,12 @@
 
 ::-moz-selection {
     color: #fefefe;
-    background: #c1bc8c;
+    background: #e4b17d;
 }
 
 ::selection {
     color: #fefefe;
-    background: #c1bc8c;
+    background: #e4b17d;
 }
 
 
@@ -93,7 +93,7 @@ button {
 	font-family: 'GT-Cinetype-Trial-Bold';
 	font-size: 1rem;
 	width: auto;
-	background-color: #c1bc8c;
+	background-color: #e4b17d;
 	color: #FFF;
 	border: none;
 	cursor: pointer;
@@ -107,12 +107,12 @@ button:hover, button:focus {
 	height: 100%;
 }
 a:link, a:visited {
-	color: #c1bc8c;
+	color: #e4b17d;
 	text-decoration: none;
 	transition: all .2s ease;
 }
 a:hover, a:focus, a:active {
-	color: #92AAD0;
+	color: #c3996e;
 }
 .masthead {
 	padding: 2.5rem 5%;
@@ -215,7 +215,7 @@ a:hover, a:focus, a:active {
 	-webkit-font-smoothing: antialiased;
 	font-size: 1rem;
 	text-align: right;
-	color: #c1bc8c;
+	color: #999;
 }
 
 .intro {
@@ -267,7 +267,7 @@ a:hover, a:focus, a:active {
 	font-size: .8rem;
 	text-transform: uppercase;
 	position: relative;
-	color: #c1bc8c;
+	color: #e4b17d;
 	margin-top: 2rem;
 	margin-bottom: .2rem;
 }
@@ -365,7 +365,11 @@ a:hover, a:focus, a:active {
 	position: relative;
 	border-radius: .1rem;
 /*	background-color: rgba(147,171,207,.8);*/
-	background-color: rgba(47, 181, 57, 0.72);
+	/*background-color: rgba(47, 181, 57, 0.72);*/
+	/*background-color: rgba(38,117,95,0.6);*/
+	/*background-color: rgba(140,28,100,0.6);*/
+	/*background-color: rgba(146,0,61,0.6);*/
+	background-color: rgba(234, 168, 87, 0.80);
 	color: #FFF;
 	width: 100%;
 	height: 100%;
@@ -374,9 +378,9 @@ a:hover, a:focus, a:active {
 	padding: 5%;
 	height: 100%;
 	mix-blend-mode: normal;
-	background-color: #93ABCF;
+	background-color: #ffab70;
 	mix-blend-mode: lighten;
-/*	background-color: rgba(0,0,0,.1);*/
+	background-color: rgba(105, 175, 162, 0.79);
 }
 .media-card h3 {
 	font-family: 'MillerBanner';
@@ -411,7 +415,7 @@ a:hover, a:focus, a:active {
 	text-align: center;
 	letter-spacing: 1px;
 }
-.media-card .time-stamp a:link {
+.media-card .time-stamp a:link, .media-card .time-stamp a:visited {
 	color: #FFF;
 }
 .media-card .retweets-count {
@@ -520,7 +524,7 @@ a:hover, a:focus, a:active {
 	letter-spacing: 1px;
 }
 .story-list h1 { 
-	border-bottom: solid #c1bc8c 1px;
+	border-bottom: solid #e4b17d 1px;
 	padding-bottom: 1rem;
 }
 .results {
@@ -647,7 +651,7 @@ input, textarea {
 	border: solid #DDD 1px;
 }
 input:focus, textarea:focus {
-	border: solid #c1bc8c 1px;
+	border: solid #e4b17d 1px;
 }
 .post-information label {
 /*	border: solid red 1px;*/
@@ -700,7 +704,7 @@ input:focus, textarea:focus {
 		height: 1px;
 		left: 9rem;
 		top: .5rem;
-		background-color: #c1bc8c;
+		background-color: #e4b17d;
 	}
 
 	/* Search */
